# Unitree-A1-Remote-control-through-MQTT

./: CMakeLists.txt  README.md  mqttrecv.cpp  mqttsend.cpp
examples/: KeyboardControl.cpp  example_walk.cpp  mqttrecv.cpp  mqttsend.cpp
include/: mqtt.cpp
include/unitree_legged_sdk/: udp.h
lib/: libpaho-mqtt3a.so.1.3  libpaho-mqtt3as.so.1.3  libpaho-mqtt3c.so.1.3  libpaho-mqtt3cs.so.1.3  libpaho-mqttpp3.so.1.2.0
mqtt/: mqtt.cpp  mqtt.h
